# chunkedge-schematics

./: Cargo.toml  README.md  test.schem
examples/: inspect.rs  paste.rs  roundtrip.rs
src/: block.rs  error.rs  lib.rs  paste.rs  schematic.rs
src/formats/: litematica.rs  mod.rs  sponge.rs  structure.rs
tests/: paste_into_world.rs
